# minimal-ricing

./: .editorconfig  .gitignore  CMakePresets.json  Dockerfile
.github/workflows/: build.yml  codeql.yml  package.yml  release.yml
dmenu/: CMakeLists.txt
dmenu/include/: drw.h
dmenu/src/: dmenu.c  drw.c  stest.c  util.c
